// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with a tooltip 1`] = `
<Tooltip
  overlay="my custom tooltip"
  placement="right"
>
  <li>
    <ButtonPlain
      aria-selected={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      preventDefault={true}
    >
      myitem
    </ButtonPlain>
  </li>
</Tooltip>
`;

exports[`should render correctly with children 1`] = `
<Tooltip
  placement="right"
>
  <li>
    <ButtonPlain
      aria-selected={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      preventDefault={true}
    >
      <i
        className="custom-icon"
      />
      <p>
        seconditem
      </p>
    </ButtonPlain>
  </li>
</Tooltip>
`;

exports[`should render correctly without children 1`] = `
<Tooltip
  placement="right"
>
  <li>
    <ButtonPlain
      aria-selected={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      preventDefault={true}
    >
      myitem
    </ButtonPlain>
  </li>
</Tooltip>
`;

exports[`should render with the active class 1`] = `
<Tooltip
  placement="right"
>
  <li>
    <ButtonPlain
      aria-selected={true}
      className="active"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      preventDefault={true}
    >
      myitem
    </ButtonPlain>
  </li>
</Tooltip>
`;
